Refactor delete and find All.
Signed-off-by: Pan Li <panli@microsoft.com>